plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'jpabook'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	byteBuddyAgent
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
    implementation 'com.h2database:h2:2.1.214'
    annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation("org.junit.vintage:junit-vintage-engine") {
		exclude group: "org.hamcrest", module: "hamcrest-core"
	}
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation("org.junit.jupiter:junit-jupiter")
	testImplementation platform('org.junit:junit-bom:5.9.1')
	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1")
	implementation 'org.springframework.boot:spring-boot-starter-validation'


	// JWT 필수 의존성
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// SpringFox Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	//jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage")
	//jvmArgs( "-javaagent:${ configurations.byteBuddyAgent.singleFile }" )
	useJUnitPlatform()
}
tasks.withType(Test).configureEach {
	jvmArgs += [
			'-XX:+EnableDynamicAgentLoading',
			'-Djdk.instrument.traceUsage'
	]
}
